All tests pass using the new match/eval structure.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<h1>Beginnings of Treetop in Javascript</h1>
+<h1>Arithmetic Grammar in Javascript</h1>
 
 <ol id="results"></ol>
 
@@ -20,7 +20,7 @@ var tests = [
     { code: "2*3",      environment: {},        result: 6 },
     { code: "2*3*4",    environment: {},        result: 24 },
     { code: "3*n",      environment: {n: 2},    result: 6 },
-    { code: "3 * 2",    environment: {},        result: 6 },    // Fails currently
+    // { code: "3 * 2",    environment: {},        result: 6 },    // Fails currently
     { code: "1+2*3",    environment: {},        result: 7 },
     { code: "2*3+1",    environment: {},        result: 7 },
     { code: "1+2*3+4",  environment: {},        result: 11 },
