--- a/index.html
+++ b/index.html
@@ -13,6 +13,53 @@
 <ol id="results"></ol>
 
 <script type="text/javascript">
+// Grammar parser tests
+var ap = ArithmeticParser.create();
+var tests = [
+    { code: "",         parseable: false },
+    { code: "0",        parseable: true },
+    { code: "(0)",      parseable: true },
+    { code: "123",      parseable: true },
+    { code: "1+2",      parseable: true },
+    { code: "2*3",      parseable: true },
+    { code: "(2*3)",    parseable: true },
+    { code: "2*(3)",    parseable: true },
+    { code: "2(*3)",    parseable: false },
+    { code: "(2*)3",    parseable: false },
+    { code: "(2*3)*4",  parseable: true },
+    { code: "2*(3*4)",  parseable: true },
+    { code: "(1",       parseable: false },
+    { code: "1)",       parseable: false },
+    { code: ")1",       parseable: false },
+    { code: "1(",       parseable: false },
+    { code: "()",       parseable: false },
+    { code: "1+",       parseable: false },
+    { code: "+1",       parseable: false },
+];
+for(var i in tests)
+{
+    var test = tests[i];
+    var val = null;
+    if (test.rule)
+    {
+        val = test.rule(test.code);
+    } else {
+        val = ap.parse(test.code);
+    }
+
+    if (val && test.parseable)
+    {
+        $('#results').append("<li>Success: " + test.code + " was parseable.</li>");
+    } else if (!val && !test.parseable) {
+        $('#results').append("<li>Success: " + test.code + " was not parseable, as expected.</li>");
+    } else if (!val && test.parseable) {
+        $('#results').append("<li>Failure: " + test.code + " was not parseable, it was expected to be parseable.</li>");
+    } else {
+        $('#results').append("<li>Failure: " + test.code + " was parseable, it was expected not to be.</li>");
+    }
+}
+
+// Arithmetic tests
 var tests = [
     { code: "0",        environment: {},        result: 0 },
     { code: "(0)",      environment: {},        result: 0 },
@@ -23,6 +70,7 @@ var tests = [
     { code: "2*3",      environment: {},        result: 6 },
     { code: "(2*3)",    environment: {},        result: 6 },
     { code: "2*3*4",    environment: {},        result: 24 },
+    { code: "2*(3*4)",  environment: {},        result: 24 },
     { code: "(2*3)*4",  environment: {},        result: 24 },
     { code: "2*(3*4)",  environment: {},        result: 24 },
     { code: "(2*3*4)",  environment: {},        result: 24 },
